Fixed the issue where going fullscreen made the article jump a few pixels to the left

--- a/styles/sass/post/parts/_film.sass
+++ b/styles/sass/post/parts/_film.sass
@@ -2,3 +2,7 @@
 
 	height: 330px
 	background: #ebeeee
+
+.film-display-view
+
+	background: #ebeeee
