--- a/styles/sass/post/parts/_header.sass
+++ b/styles/sass/post/parts/_header.sass
@@ -1,6 +1,6 @@
 #header
 
-	position: absolute
+	position: fixed
 
 	width: 100%
 	top: 0
